Step 2: Sign Up Page

--- a/src/input.css
+++ b/src/input.css
@@ -4,12 +4,74 @@
 
 @layer base {
     html {
-        @apply font-sans prose dark:prose-invert;
+        @apply font-sans  prose dark:prose-invert text-base prose-p:my-4;
+    }
+}
+
+@layer utilities {
+    .list-checked {
+        @apply relative pl-8 before:w-6 before:h-6 before:absolute before:left-0 before:top-0;
+    }
+
+    .list-checked::before {
+        content: "";
+        background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' viewBox='0 0 24 24'%3E%3Cpath fill-rule='evenodd' d='M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-2 0a8 8 0 1 1-16 0 8 8 0 0 1 8-8 7.98 7.98 0 0 1 5.942 2.644L11 13.586l-2.793-2.793a1 1 0 0 0-1.414 1.414L9.586 15a2 2 0 0 0 2.828 0l6.687-6.687C19.676 9.416 20 10.67 20 12z' fill='%2383bf6e'/%3E%3C/svg%3E") no-repeat 50% 50%/100% auto;
+
+    }
+
+    .inline {
+        @apply flex flex-col  md:flex-row gap-4 items-center;
     }
 }
 
 @layer components {
     .public-layout {
-        @apply flex min-h-screen;
+        @apply flex min-h-screen w-screen bg-base-100 ;
     }
+
+    .logo {
+        @apply h-auto w-14;
+    }
+
+    .side-bar {
+        @apply hidden flex-shrink-0 w-full max-w-sm bg-gray-100 dark:bg-base-300 p-4 md:flex flex-col;
+    }
+
+    .side-bar .login-pic {
+        @apply h-auto w-48 mx-auto;
+    }
+
+    .side-bar .content {
+        @apply flex flex-col items-center justify-center flex-grow mx-auto max-w-xs;
+    }
+
+    .side-bar .list {
+        @apply flex flex-col gap-6 text-left w-full;
+    }
+
+    .side-bar .list li {
+        @apply list-checked;
+    }
+
+    .main.auth {
+        @apply flex flex-col items-center justify-center flex-grow w-full;
+    }
+
+    .main.auth .sign-up {
+        @apply flex flex-col items-start justify-center flex-grow w-full mx-auto max-w-xs text-left px-4 md:px-0;
+    }
+
+
+    .btn > img {
+        @apply h-auto w-6 m-0;
+    }
+
+    .oAuth-btn {
+        @apply hover:bg-transparent hover:text-base-content gap-2 md:w-max w-full flex-grow;
+    }
+
+    hr {
+        @apply !my-8 h-1 w-full;
+    }
+    
 }
